--- a/xmonad-app-groups.cabal
+++ b/xmonad-app-groups.cabal
@@ -2,7 +2,7 @@
 -- documentation, see http://haskell.org/cabal/users-guide/
 
 name:                xmonad-app-groups
-version:             0.1.0.0
+version:             0.1.0.1
 synopsis:            XMonad application groups
 -- description:         
 license:             BSD3
@@ -20,6 +20,9 @@ library
   -- other-modules:       
   other-extensions:    ExistentialQuantification, TypeSynonymInstances, FlexibleInstances, DeriveDataTypeable, PatternGuards, ViewPatterns
   build-depends:       base >=4.9 && <4.10,
+                       filepath >= 1.4,
+                       aeson >= 1.1.2.0,
+                       yaml >= 0.8,
                        xmonad >= 0.13,
                        xmonad-contrib >= 0.13,
                        xmonad-extras >= 0.13,
