--- a/stack.yaml
+++ b/stack.yaml
@@ -15,7 +15,7 @@
 # resolver:
 #  name: custom-snapshot
 #  location: "./custom-snapshot.yaml"
-resolver: lts-9.6
+resolver: lts-21.21
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -25,7 +25,9 @@ packages:
 - /home/portnov/src/xmonad-modules/xmonad-functions/
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
-extra-deps: []
+extra-deps:
+  - xmonad-extras-0.17.0
+  - libmpd-0.10.0.0
 
 # Override default flag values for local packages and extra-deps
 flags: {}
