--- a/xmonad-app-groups.cabal
+++ b/xmonad-app-groups.cabal
@@ -20,13 +20,14 @@ library
   -- other-modules:       
   other-extensions:    ExistentialQuantification, TypeSynonymInstances, FlexibleInstances, DeriveDataTypeable, PatternGuards, ViewPatterns
   build-depends:       base >=4.9 && < 5,
+                       containers >= 0.6,
                        filepath >= 1.4,
                        data-default >= 0.7,
                        aeson >= 1.1.2.0,
                        yaml >= 0.8,
-                       xmonad >= 0.13,
-                       xmonad-contrib >= 0.13,
-                       xmonad-extras >= 0.13,
+                       xmonad >= 0.17,
+                       xmonad-contrib >= 0.17,
+                       xmonad-extras >= 0.17,
                        xmonad-functions >= 0.1
   -- hs-source-dirs:      
   default-language:    Haskell2010
